# agent-studio

./: .env  .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build-desktop.yml  deploy.yml
deploy/: nginx-agent-studio.conf
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
public/: canvas-bridge.js  robots.txt  site.webmanifest  sitemap.xml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AccountPage.tsx  AgentStudioLogo.tsx  AuthModal.tsx  BrowserView.tsx  CanvasEmbed.tsx  CanvasHome.tsx  CanvasPanel.tsx  CanvasSettings.tsx  ChatMessageBubble.tsx  ChatPane.tsx  CodeView.tsx  ConnectedAccounts.tsx  ContextPanel.tsx  FloatingChat.tsx  GlobalHeader.tsx  IntentCardFlow.tsx  MessageComposer.tsx  PricingPlans.tsx  RuntimeBadge.tsx  SEOHead.tsx  ServiceIcons.tsx  SmartHomeConnections.tsx  StatusBar.tsx  TaskRail.tsx  WelcomeScreen.tsx
src/components/landing/: Footer.tsx  (+1 more)
src/hooks/: useAgent.ts  useComposioConnections.ts  useIntentDetection.ts  useMockAgent.ts  useSessionManager.ts  useWhatsAppChannel.ts
src/lib/: nativeRuntime.ts  templateCache.ts  usageLog.ts
src/pages/: About.tsx  Contact.tsx  Features.tsx  Index.tsx  Landing.tsx  Support.tsx
src/types/: chat.ts
supabase/: config.toml
supabase/migrations/: 20260316072451_16837088-4304-4d6e-ae14-e0c56f1f2e17.sql  20260316140000_add_canvas_id.sql
(+4 files in other folders)
