[package]
name = "agent-studio"
version = "0.2.0"
description = "Agent Studio desktop shell"
authors = ["Agent Studio"]
license = "Proprietary"
edition = "2021"

[lib]
name = "agent_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
